--- a/v2.2.html
+++ b/v2.2.html
@@ -11,7 +11,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: #111;
+      background: #FFFFFF;
     }
 
     .c {
@@ -20,7 +20,7 @@
       align-items: center;
     }
 
-    /* Main background */
+    /* Main background css */
     .c-main-bg-box {
       display: flex;
       height: 400px;
@@ -72,7 +72,7 @@
       right: 30px;
       animation: zoomIn 2s ease-in-out forwards 1.2s, bounceOnce 1.5s ease forwards 4s;
       z-index: 100;
-           background-image: linear-gradient(-140deg, red, #FF004A);
+           background-image: linear-gradient(-140deg, red, #FF00AF);
  
       
     }
@@ -107,14 +107,25 @@
       0%, 100% { transform: translateY(0); }
       50% { transform: translateY(-20px); }
     }
+    .c-w-r{
+      width: 80%;
+      height: 80%;
+      background-color: #fff
+      ;
+      border-radius: 100px;
+    }
   </style>
 </head>
 
 
-. 
+
 <body>
   <div class="c c-main-bg-box">
-    <div class="c-s"></div>
+    <div class="c c-s">
+      <div class="c c-w-r">
+        
+      </div>
+    </div>
     <div class="c c-l-bb">
       <div class="c c-box-squ">
         <div class="c c-fill">
